--- a/package.json
+++ b/package.json
@@ -57,13 +57,13 @@
   ],
   "dependencies": {
     "@typescript-eslint/parser": "^5.0.0",
-    "eslint-config-standard": "^17.0.0-1"
+    "eslint-config-standard": "^17.0.0"
   },
   "peerDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "eslint": "^8.0.1",
     "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-n": "^14.0.0",
+    "eslint-plugin-n": "^15.2.0",
     "eslint-plugin-promise": "^6.0.0",
     "typescript": "*"
   },
@@ -82,7 +82,7 @@
     "editorconfig-checker": "4.0.2",
     "eslint": "8.8.0",
     "eslint-plugin-import": "2.25.4",
-    "eslint-plugin-n": "14.0.0",
+    "eslint-plugin-n": "15.2.0",
     "eslint-plugin-promise": "6.0.0",
     "fs.promises": "0.1.2",
     "inclusion": "1.0.1",
